fixed x scrolling on mobile view

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,4 +1,4 @@
-@media (max-width: 375px) {
+@media (max-width: 376px) {
   body {
     overflow-x: hidden;
     margin: 0;
@@ -6,10 +6,12 @@
     box-sizing: border-box;
     font-family: "Open Sans", "Raleway";
   }
-
+  .header {
+    width: 375px;
+  }
   .banner {
-    margin: 15px 10px 50px 10px;
-    gap: 4rem;
+    margin: 15px 0 50px 0;
+    gap: 5rem;
   }
 
   .main-logo {
@@ -20,8 +22,10 @@
     margin-right: 14px;
   }
   .heading-main {
+    width: 350px;
     grid-template-columns: 350px;
-    margin: 7px;
+    margin: 0;
+    margin-left: 12px;
   }
   .heading-primary {
     text-align: center;
